<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="app_name">Japanese Emoticons</string>
    <string name="app_launcher">Japanese emoticons selector</string>
    <string name="copied">Copied in clipboard!</string>
    <string name="added">Added to clipboard!</string>
    <string name="editor">User smiles editor</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="show_notification">Show notification</string>
    <string name="show_notification_t">Show permanent notification in the system bar.</string>
    <string name="hide_after">Hide window</string>
    <string name="hide_after_t">Hide window just after emoticon copying.</string>
    <string name="toast_after">Show toast</string>
    <string name="toast_after_t">Show a popup message when emoticon has copied.</string>
    <string name="input_emoticon">Input an emoticon:</string>
    <string name="oldstyle_fourpage">Old-style 4 page</string>
    <string name="oldstyle_fourpage_t">Show kaomoji without groups.</string>
    <string name="theme">Theme</string>
    <string name="theme_t">Restart is required.</string>
    <string name="tutorial">Tutorial</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="show_tabs">Show category tabs</string>
    <string name="show_tabs_t">Restart is required.</string>
    <string name="add_spaces">Add spaces</string>
    <string name="add_spaces_t">Add spaces before and after emoticons automatically.</string>
    <string name="long_press">Long press action</string>
    <string name="long_press_t">Select a long-press button action.</string>
    <string name="action_favorites">Add to favorites</string>
    <string name="action_clipboard">Add to clipboard</string>
    <string name="old_icon">Old notification icon</string>
    <string name="old_icon_t">Show old yellow icon instead of classic white</string>
    <string name="theme_light">Light</string>
    <string name="theme_black">Black</string>
    <string name="theme_orange">Orange</string>
    <string name="theme_pink">Pink</string>
    <string name="selection">Selection</string>
    <string name="iface">Interface</string>
    <string name="importexport">Import and export</string>
    <string name="export_c">Export custom</string>
    <string name="export_t">Export emoticons to sdcard/Emoticons/data.txt</string>
    <string name="import_c">Import custom</string>
    <string name="import_t">Import emoticons from sdcard/Emoticons/data.txt</string>
    <string name="notavailable_writing">External storage is not available for writing!</string>
    <string name="notavailable_reading">External storage is not available for reading!</string>
    <string name="exporting">Exporting. Please wait...</string>
    <string name="importing">Importing. Please wait...</string>
    <string name="exported">Exported successfully.</string>
    <string name="imported">Imported successfully.</string>
    <string name="other">Other</string>
    <string name="show_tutorial">Show tutorial</string>
    <string name="clear_clipboard">Clear the clipboard</string>
    <string name="step1">Click on the desired emoticon.</string>
    <string name="step2">It will be automatically copied to the clipboard.</string>
    <string name="step3">Now you can paste it everywhere. Just make a long-press on the text area and select \"Paste\".</string>
    <string name="step4">"That's all. Thank you!"</string>
</resources>
